# qwen_agent

./: .gitignore  README.md  alembic.ini  app.py  env_example  pyproject.toml
alembic/: env.py
api/: pyproject.toml
api/alembic/versions/: 2c109e0af786_modify_memory_table.py  2c500e0cf7ec_create_audio_data_table.py  6413379cb6e7_create_audio_data_table1.py  840cf0878f18_create_music_table.py  cb0172c2c6d2_add_memory_typ.py
api/config/: app_config.py
api/controllers/files/: file_service.py
api/core/: qwen_agent.py
api/core/api_service/: audio_api.py  audio_stream_api.py  mem0_api.py  music_api.py
api/core/tools_call/: tools_util.py
api/core/tools_call/provide/artist/: artist.py
api/core/tools_call/provide/control/: control.yaml
api/core/tools_call/provide/music/: music.py  music.yaml
api/core/tools_call/provide/play_list/: play_list.py  play_list.yaml
api/core/user/: api_token.py  message.py  music_data.py
api/extensions/: exten_agent.py  exten_api.py  exten_sql.py
api/fields/: app_fields.py  message_type.py  v1_version.py
api/services/: __init__.py
api/services/audio_services/: audio_services.py
api/services/authentication/: authentication.py
api/services/test_services/: login.py
api/services/v2_chat/: chat_message.py
api/services/web/: agent_web.py
api/tasks/: db_music_task.py
api/templates/: audio.html  test.html  v1_index.html
api/templates/static/: fireworks.js  v2_index.js
api/tests/: agent_chat.py  aiohttp_test.py  audio.py  audio_clone.py  firecrawl.py  google.py  llm_test.py  video.py  ximalaya_api.py
core/: crud.py  (+4 more)
(+84 files in other folders)
