[tool.poetry]
name = "qwen-agent"
version = "0.1.0"
description = ""
authors = ["吴明辉 <1334878991@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.52.0"
requests = "^2.32.3"
netifaces = "^0.11.0"
fastapi = "^0.115.2"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
black = "^24.10.0"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.12"
sqlalchemy = "^2.0.36"
sentry-sdk = "^2.17.0"
jwt = "^1.3.1"
alembic = "1.12.1"
sqlmodel = "^0.0.22"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.9.2"}
psycopg = "^3.2.3"
aioredis = "^2.0.1"
celery = {extras = ["redis"], version = "^5.4.0"}
pytz = "^2024.2"
aiohttp = "^3.10.10"
firecrawl = "^1.4.0"
base = "^0.0.0"
mem0ai = "^0.1.29"
dashscope = "^1.20.12"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
